grammar.js
    sourceFile: $ => choice(
      seq(
        'package', $.packageIde, ';', 
          repeat($.exportDecl),
          repeat($.importDecl),
          repeat($.packageStmt),
        'endpackage', optseq(':', $.packageIde)
      ),
      // NOTE: Contrary to spec, the actual bsc implementation allows files 
      //       without a package declaration.
      seq(
        repeat($.exportDecl),
        repeat($.importDecl),
        repeat($.packageStmt),
      ),
    ),

    // NOTE: Ignore compiler directives for now. Assume pre-processed source.
    //       The directives use C syntax, so any C pre-processor works on these.
    //       Alternatively, we could use preprocessor rules from tree-sitter-c
    // compilerDirective: $ => choice(
    //   seq("'include", '"', $.filename, '"'),
    //   seq("'include", '<', $.filename, '>'),
    //   seq("'include", $.macroInvocation),
    //   seq("'line", $.decDigits, '"', $.filename, '"', $.level),
    //   seq("'define", $.macroName, optseq('(', $.macroFormals, ')'), $.macroText),
    // ),
    // level: $ => choice('0', '1', '2'),

    importDecl: $ => seq('import', $.importItem, repeatseq(',', $.importItem), ';'),
    importItem: $ => seq($.packageIde, '::', '*'),

    packageStmt: $ => choice(
      $.moduleDef,
      $.interfaceDecl, 
      $.typeDef, 
      $.varDecl, 
      // NOTE: Only the below "varAssign" rule choice is valid at packageStmt scope,
      //       contrary to the spec.
      prec.left(seq($.lValue, '=', $.rValue)),
      $.functionDef,
      $.typeclassDef,
      $.typeclassInstanceDef,
      // TODO: Add externModuleImport, sec. 15 from BSV lang ref
      $.externModuleImport, 
      // NOTE: externCImport was missing in the spec:
      $.externCImport, 
    ),

    //  NOTE: BSV lang ref guide requires upper case; 
    //  the actual bsc implementation does not care...
    packageIde: $ => $.identifier, 

    // ================================================================
    // sec 4 Types

    type: $ => prec.left(seq(
      // NOTE: bsc allows namespaced types, e.g., Prelude::List.
      optseq($.identifier, '::'), 
      choice(
        $.typePrimary, 
        // NOTE: A type can have optional parentheses around.
        prec.left(seq(
          '(', $.typePrimary, ')'
        )),
        prec.left(seq(
          $.typePrimary, '(', $.type, repeatseq(',', $.type), ')'
        ))
      )
    )),

    typePrimary: $ => prec.right(choice(
      prec.right(seq($.typeIde, optseq('#', '(', $.type, repeatseq(',', $.type), ')'))),
      $.typeNat,
      //  Only [N:0] bit vectors supported
      seq('bit', optseq('[', $.typeNat, ':', '0', ']')),
      $.functionType,
      // NOTE: A type can don't care in bsc.
      '?',
    )),

    functionType: $ => prec.right(seq(
      'function', $.type, choice($.identifier, seq('\\', $.binop)),
        optseq('(', optional($.functionFormals), ')')
    )),
    // NOTE: subFunctions use type inference in bsc, which means the return and 
    //       argument types can be ommited.
    typeIde: $ => $.identifier,
    typeNat: $ => $.decDigits,

    // ================================================================
    // sec 5.2 Interface declaration

    interfaceDecl: $ => seq(
      optional($.attributeInstance), 
      'interface', $.typeDefType, ';', 
        repeat($.interfaceMemberDecl),
      'endinterface', optseq(':', $.typeIde)
    ),

    typeDefType: $ => seq(
      $.typeIde, optional($.typeFormals)
    ),
    interfaceMemberDecl: $ => choice($.methodProto, $.subinterfaceDecl),

    methodProto: $ => seq(
      optional($.attributeInstances), 
      'method', $.type, $.identifier, optseq('(', optional($.methodProtoFormals), ')'), ';'
    ),

    methodProtoFormals: $ => seq(
      $.methodProtoFormal, repeatseq(',', $.methodProtoFormal)
    ),
    // NOTE: A function can be a method parameter.
    methodProtoFormal: $ => choice(
      seq(optional($.attributeInstances), $.type, $.identifier),
      $.functionProto
    ),

    // NOTE: Spec seems to be missing "identifier".
    subinterfaceDecl: $ => seq(
      optional($.attributeInstances), 'interface', $.type, $.identifier, ';'
      // optional($.attributeInstances), 'interface', $.typeDefType, $.identifier, ';'
    ),

    // ================================================================
    // sec 5.3 Module definition

    moduleDef: $ => seq(
      optional($.attributeInstances), 
      $.moduleProto,
        repeat($.moduleStmt), 
      'endmodule', optseq(':', $.identifier)
    ),

    moduleProto: $ => seq(
      'module', optseq('[', $.type, ']'), $.identifier,
      optional($.moduleFormalParams), '(', optional($.moduleFormalArgs), ')',
      optional($.provisos), ';'
    ),
    moduleFormalArgs: $ => choice(
      seq(optional($.attributeInstances), $.type),
      seq(optional($.attributeInstances), $.type, $.identifier,
          repeatseq(',', optional($.attributeInstances), $.type, $.identifier))
    ),

    moduleStmt: $ => choice(
      $.moduleInst,
      $.methodDef,
      $.subinterfaceDef,
      $.rule, 
      // NOTE: We do not allow varDo/varDeclDo here. Their syntax is covered by moduleInst.
      // $.varDo, $.varDeclDo,
      // NOTE: The spec {module, function, action, actionValue, etc}Stmt rules 
      //       are missing semicolons in some places.
      prec.left(seq($.functionCall, ';')),
      $.systemTaskStmt,
      prec.left(seq('(', $.expression, ')', ';')),
      $.returnStmt,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.moduleDef,
      // NOTE: The spec does not say this, but bsc allows naked condExprs.
      seq($.condExpr, ';'),
      ctxtBeginEndStmt($, $.moduleStmt),
      ctxtIf($, $.moduleStmt),
      ctxtCase($, $.moduleStmt),
      ctxtFor($, $.moduleStmt),
      ctxtWhile($, $.moduleStmt),
    ),


    // ============================================================
    // sec 5.4 Module and interface instantiation

    // sec 5.4.1 Short form instantiation
    // NOTE: We do not provide rules for sec 5.4.2 Long form instantiation (depractaed),
    //       because this syntax is covered by the varDecl rule.
    moduleInst: $ => prec.left(seq(
      optional($.attributeInstances),
      // NOTE: Contrary to spec, we make the type optional, since
      //       we could be assigning to an already declared Vector for example.
      //       We also do s/identifier/lValue to allow asigning to array indexes,
      //       or to allow things like concurrent registers.
      optional($.type), $.lValue, '<-', $.moduleApp, ';'
    )),
    moduleApp: $ => prec.left(seq(
      // NOTE: Parens are optional in the bsc implementation.
      $.identifier, optseq('(', 
        optseq($.moduleActualParamArg, repeatseq(',', $.moduleActualParamArg)),
      ')')
    )),
    moduleActualParamArg: $ => choice(
      $.expression,
      seq('clocked_by', $.expression),
      seq('reset_by', $.expression)
    ),

    // ============================================================
    // sec 5.5 Interface definition (definition of methods)

    // NOTE: Parens in method definition should be optional.
    //       It should also be possible to have empty parens.
    //       The spec is wrong here.
    methodDef: $ => choice(
      seq(
        'method', optional($.type), $.identifier,
          optseq('(', optional($.methodFormals), ')'),
          optional($.implicitCond), ';', 
            $.functionBody,
        'endmethod', optseq(':', $.identifier)
      ),
      // Short form (sec 5.5.3)
      seq(
        'method', optional($.type), $.identifier, 
        optseq('(', optional($.methodFormals), ')'),
        optional($.implicitCond), '=', $.rValue
      ),
      // Action method (sec. 5.5.1)
      seq(
        'method', 'Action', $.identifier,
          optseq('(', optional($.methodFormals), ')'),
          optional($.implicitCond), ';', 
            repeat($.actionStmt),
        'endmethod', optseq(':', $.identifier),
      ),
      // ActionValue method (sec. 5.5.1)
      seq(
        'method', 'ActionValue', $.typeFormals, $.identifier,
          optseq('(', optional($.methodFormals), ')'),
          optional($.implicitCond), ';', 
            repeat($.actionValueStmt),
        'endmethod', optseq(':', $.identifier),
      ),
    ),

    methodFormals: $ => seq($.methodFormal, repeatseq(',', $.methodFormal)),
    methodFormal: $ => seq(optional($.type), $.identifier),
    implicitCond: $ => prec.right(seq('if', '(', $.condPredicate, ')')),
    
    // 5.5.2 Definition of subinterfaces
    subinterfaceDef: $ => choice(
      seq(
        'interface', $.identifier, $.identifier, ';',
          repeat($.interfaceStmt), 
        'endinterface', optseq(':', $.identifier)
      ),
      // Short form (sec 5.5.3)
      seq(
        'interface', optional($.type), $.identifier, '=', $.rValue
      ),
    ),
    rule: $ => prec.left(seq(
      optional($.attributeInstances), 
      'rule', $.identifier, optional($.ruleCond), ';', 
        repeat($.actionStmt), // rule body
      'endrule', optional(seq(':', $.identifier))
    )),
    ruleCond: $ => prec.left(seq('(', $.condPredicate, ')')),
    condPredicate: $ => prec.left(seq(
      $.exprOrCondPattern, repeatseq('&&&', $.exprOrCondPattern)
    )),
    exprOrCondPattern: $ => choice(
      $.expression,
      prec.left(seq($.expression, 'matches', $.pattern)),
      // NOTE: Contrary to spec, a pattern and an expression can be in parens.
      prec.left(seq($.expression, 'matches', '(', $.pattern, ')')),
      prec.left(seq('(', $.expression, ')')),
    ),

    // ================================================================
    // Typedefs

    typeDef: $ => choice(
      $.typedefSynonym, 
      $.typedefEnum, 
      $.typedefStruct,
      $.typedefTaggedUnion
    ),

    typedefSynonym: $ => prec.left(seq(
      'typedef', $.type, $.typeDefType, ';'
    )),

    varDecl: $ => prec.right(choice(
      prec.left(seq($.type, $.varInit, repeatseq(',', $.varInit), ';')),
      prec.left(seq('let', $.identifier, '=', $.rValue)),
      // NOTE: The spec is missing the below rule to allow declarations like:
      //       Reg#(Maybe#(t)) data();
      prec.left(seq($.type, $.identifier, 
        '(', 
          optseq($.expression, repeatseq(',', $.expression)),
        ')', ';')
      ),
    )),
    varInit: $ => prec.left(seq(
      // NOTE: Contrary to the spec, we allow an lValue here, not just an identifier.
      //       The lValue arleady takes care of optional arrayIndexes.
      $.lValue, optseq('=', $.expression)
    )),

    // Variable assignment. Note that we use rValue instead of expression.
    varAssign: $ => choice(
      prec.left(seq($.lValue, '=', $.rValue)),
      // if expression is the value returned by an actionvalue method:
      prec.left(seq('let', $.identifier, '<-', $.rValue)),
      // sec 11.4 pattern matching
      prec.left(seq('match', $.pattern, '=', $.rValue))
    ),
    regWrite: $ => prec.left(seq($.lValue, '<=', $.rValue)),

    lValue: $ => prec.left(choice(
      $.identifier, 
      // NOTE: The spec is missing tupleBind, and a function call that can return an lValue.
      $.tupleBind,
      // NOTE: We use identifier for function name in lValues, instead of exprPrimary.
      field('lValueFunctionCall', prec.left(seq(
        $.identifier, '(', optseq($.expression, repeatseq(',', $.expression)), ')'
      ))),
      prec.left(seq($.lValue, '.', $.identifier)),
      prec.left(seq($.lValue, $.arrayIndexes)),
      prec.left(seq($.lValue, '[', $.expression, ':', $.expression, ']')),
      prec.left(seq('(', $.expression, ')')),
    )),
    arrayIndexes: $ => prec.right(repeat1(seq('[', $.expression, ']'))),

    // NOTE: This rule does not exist in the language spec, but we add it here
    //       because we also allow a caseExpr to appear here, which the spec 
    //       misses. We use rValue instead of seq(expression, ';').
    rValue: $ => choice(
      seq($.expression, ';'),
      seq(ctxtCase($, seq($.expression, ';')), ';'),
    ),

    // NOTE: The spec does not have this rule, but it is supported by bsc.
    //       This should work: {b, i, .*} <- mkSub;
    functionDef: $ => choice(
      prec.left(seq(
        optional($.attributeInstances), 
        // NOTE: We removed the semicolon from the functionProto rule
        //       to allow functionProtos to appear in method/function arguments.
        $.functionProto, ';',
          $.functionBody, 
        'endfunction', optseq(':', $.identifier)
      )),
      // NOTE: A function def, similarly to method def, can have a short form.
      prec.left(seq(
        optional($.attributeInstances), 
        $.functionProto, '=', $.rValue
      )),
    ),

    // NOTE: Contrary to the spec, our rule does not have a semicolon, requiring
    //       any super rules to handle them. This is to enable function prototypes
    //       to appear in function/method arguments.
    //       Also, we have optional parens, contrary to spec?
    functionProto: $ => prec.left(seq(
      $.functionType, optional($.provisos), optional($.expression)
    )),
    functionFormals: $ => prec.left(seq(
      $.functionFormal, repeatseq(',', $.functionFormal)
    )),
    functionFormal: $ => choice(
      prec.left(seq($.type, $.identifier)),
      // NOTE: A function can take another function as parameter.
      $.functionProto
    ),

    // NOTE: subFunctions use type inference in bsc, which means the return and 
    //       argument types can be ommited. Hence separate rules for sub functions.
    functionBody: $ => choice(
      $.actionBlock,
      $.actionValueBlock,
      // NOTE: Spec allows repeat0, but there is no way to have an empty body?
      repeat1($.functionBodyStmt),
    ),
    functionBodyStmt: $ => choice(
      $.returnStmt, 
      $.varDecl, 
      $.varAssign, 
      // NOTE: We created a a new subFunctionDef rule, because the bsc compiler
      //       treats function definitions inside other functions differently.
      $.subFunctionDef,
      $.moduleDef, 
      ctxtBeginEndStmt($, $.functionBodyStmt),
      ctxtIf($, $.functionBodyStmt),
      ctxtCase($, $.functionBodyStmt),
      ctxtFor($, $.functionBodyStmt),
      ctxtWhile($, $.functionBodyStmt),
    ),
    returnStmt: $ => seq('return', $.expression, ';'),


    // ================================================================
    // sec 10 Expressions

    expression: $ => choice(
      $.condExpr, 
      $.operatorExpr, 
      $.exprPrimary
    ),

    operatorExpr: $ => choice(
      prec.right(seq($.unop, $.expression)),
      prec.left(seq($.expression, $.binop, $.expression))
    ),

    // The following operators are in order of decreasing precedence
    unop: $ => token(choice(
      prec(90, '+'),
      prec(90, '-'),
      prec(90, '!'),
      prec(90, '~'),
      prec(89, '&'),
      prec(88, '~&'),
      prec(87, '|'),
      prec(86, '~|'),
      prec(85, '^'),
      prec(84, '^~'),
      prec(84, '~^'),
    )),
    binop: $ => token(choice(
      // NOTE: The spec is missing the power binop.
      prec(83, '**'),
      prec(82, '*'),
      prec(82, '/'),
      prec(82, '%'),
      prec(81, '+'),
      prec(81, '-'),
      prec(80, '<<'),
      prec(80, '>>'),
      prec(79, '<='),
      prec(79, '>='),
      prec(79, '<'),
      prec(79, '>'),
      prec(78, '=='),
      prec(78, '!='),
      prec(77, '&'),
      prec(76, '^'),
      prec(75, '^~'),
      prec(75, '~^'),
      prec(74, '|'),
      prec(73, '&&'),
      prec(72, '||'),
    )),

    bitSelect: $ => prec.left(seq(
      $.exprPrimary, '[', $.expression, optseq(':', $.expression), ']'
    )),

    actionBlock: $ => prec.left(seq(
      'action', optseq(':', $.identifier),
        repeat($.actionStmt), 
      'endaction', optseq(':', $.identifier)
    )),
    memberBind: $ => prec.left(seq($.identifier, ':', $.expression)),

    decDigits: $ => /[0-9]+/,
